# veela-bot

./: Cargo.toml  README.md  index.js  package.json
data/: learn.txt  memories  mind
mind/: da.json  memories.json
src/: index.js  lib.rs  main.rs  mind.rs  routes.rs
src/data/: mind
src/minds/: learn.rs  make_sentances.rs  memories.rs  mind.rs  mod.rs  veela.rs
