[package]
name = "veela"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
serde_json = "1.0.117"
serde = "1.0.203"
rand = "0.8.5"
search_with_google = "0.5.0"
tokio = { version = "=0.2.25", features = ["full"] }
