[package]
name = "veela"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
serde_json = "1.0.117"
serde = "1.0.203"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
reqwest ={version = "0.12.9",features = ["json"]}
search_with_google = "0.5.0"
