[package]
name = "veela"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.116"
simple_crypt = "0.2.3"
futures = "0.3"
uuid = { version = "1.0.0-alpha.1" }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["cors"] }
regex = "1.10.4"
rand = "0.8.5"
reqwest ={version = "0.12.9",features = ["json"]}
search_with_google = "0.5.0"
